--- a/backend/views/error.ejs
+++ b/backend/views/error.ejs
@@ -1,3 +1,7 @@
-<h1><%= message %></h1>
+
+<h1>Oops! Something wrong happened... </h1>
+
+   <h1> <%= message %></h1>
 <h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<pre style="font-family: 'Comic Sans MS'"><%= error.stack %></pre>
+<!--模版引擎  用于 res.render()-->
