--- a/backend/views/index.ejs
+++ b/backend/views/index.ejs
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p>The project is for the copyright platform</p>
+    <p>This page indicates that the server has been activated. Welcome</p>
   </body>
 </html>
