--- a/backend/views/index.ejs
+++ b/backend/views/index.ejs
@@ -5,8 +5,8 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
+    <h1 style="font-family: 'Comic Sans MS'"><%= title %></h1>
     <p>The project is for the copyright platform</p>
-    <p>This page indicates that the server has been activated. Welcome</p>
+    <p>This page indicates that the server has been activated. Welcome :)</p>
   </body>
 </html>
